# wasm-component-model-calculator

./: Makefile  README.md
add/: Cargo.toml
add/src/: bindings.rs  lib.rs
app/: Cargo.toml
app/src/: bindings.rs  main.rs
calc/: Cargo.toml
calc/src/: bindings.rs  lib.rs
sub/: go.mod  go.sum  main.go
sub/internal/component/subtractor/sub/: sub.exports.go  sub.wasm.go  sub.wit.go
sub/internal/component/subtractor/subtractor/: subtractor.wit  subtractor.wit.go
sub/internal/wasi/cli/stdout/: stdout.wit.go
sub/internal/wasi/io/error/: error.wit.go  ioerror.wasm.go
sub/internal/wasi/io/streams/: streams.wasm.go  streams.wit.go
sub/internal/wasi/random/random/: random.wasm.go  random.wit.go
wasm/: composed.wasm
wit/adder/: world.wit
wit/app/: world.wit
wit/calculator/: world.wit
wit/subtractor/: world.wit
