[package]
name = "add"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:adder"

[package.metadata.component.target]
path = "../wit/adder/world.wit"

[package.metadata.component.dependencies]


