[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:calculator"


[package.metadata.component.target]
path = "../wit/calculator/world.wit"

[package.metadata.component.target.dependencies]
"component:adder" = { path = "../wit/adder/world.wit" }
"component:subtractor" = { path = "../wit/subtractor/world.wit" }


[package.metadata.component.dependencies]
